

plugins {
    id 'java'

    // not required with the beryx runtime plugin
    //id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'

    // if modular:
    //id 'org.beryx.jlink' version '3.0.1'

    // non modular:
    //https://badass-runtime-plugin.beryx.org/releases/latest/
    id 'org.beryx.runtime' version '1.13.1'
}

ext {
    javacppPlatform = 'macosx-arm64'
}
group = 'klik'
version = '1.0.0'

repositories {
    mavenCentral()
}

compileJava {
    // this is needed to enable the virtual threads preview feature in java20
    //options.compilerArgs += ['--enable-preview']
    options.compilerArgs += ['-Xlint:-options']
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


dependencies {
    // EXIF reader
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
      // Cache
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
    // files etc
    implementation group: 'commons-io', name: 'commons-io', version: '2.16.1'
    // for face recognition: gson is used to serialise the feature vectors between the python server and this app
    implementation 'com.google.code.gson:gson:2.8.6'

}

// beryx runtime plugin
runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    //modules = ['java.naming', 'java.xml']
}

def main_class_name = 'klik.Klik_application'

application {
    //mainModule = 'klikmodule'
    mainClass = main_class_name

    // Java VM RAM size options:

    // if you have only 2GB or not much more:
    //applicationDefaultJvmArgs = ["-Xms1G"]

    // if you have a lot of RAM say 64GB or more
    applicationDefaultJvmArgs = ["-Xms50G","-Xmx50G","-XX:+UseZGC"]//"-Xlog:class+init=info:file=trace.log"]

}

javafx {
    version = "23-ea+22"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing','javafx.graphics','javafx.media','javafx.web' ]
}


//jar {
//    manifest {
//        attributes(
//                'Main-Class': main_class_name
//        )
//    }
//}

/*
graalvmNative {
    binaries {
        main {
            imageName = "klik"
            mainClass = main_class_name
            buildArgs.add("-O4")
        }
        test {
            buildArgs.add("-O0")
        }
    }
    binaries.all {
        buildArgs.add("--verbose")
    }
}
*/

